#############################################
# Copyright (c) Gaia Platform LLC
# All rights reserved.
#############################################

cmake_minimum_required(VERSION 3.11)

enable_testing()

# Set the project name.
project(tests)

# Add individual component folders.
add_subdirectory(common)
